updated logic for run yandex-uploader

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ LOG_LEVEL=INFO
 
 YANDEX_TOKEN=
 YANDEX_BACKUP_DIRECTORY='/backups/'
-LOCAL_BACKUP_DIRECTORY='~/backups/'
+LOCAL_BACKUP_DIRECTORY='/home/user/backups/'
 
 MYSQL_USER=root
 MYSQL_PASSWORD=password
