several changes for project
- changed project structure
- added support for bumpversion

--- a/run.sh.template
+++ b/run.sh.template
@@ -1,2 +1,3 @@
+#!/bin/sh
+PATH="$PATH:/usr/local/bin"
 pipenv run python -m src.run test_db --handler docker_postgres --container postgres --yandex
-#pipenv run python -m src.run test_db --handler docker_postgres --container postgres --local_directory /my/directory/backup/ --yandex --yandex_directory /backups/vps
