--- a/.env.template
+++ b/.env.template
@@ -17,7 +17,9 @@ PG_VERSION=9.6.5
 PG_USER=postgres
 PG_PASSWORD=
 
+S3_REGION_NAME=
 S3_STORAGE_URL=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
+S3_DST_PATH=
