[#10] Updated logic and configuration for docker-backup
- updated handler (fix imports, raise needed errors)
- updated Dockerfile (for correct pg_dump running)
- added helpers and examples

--- a/run.sh.template
+++ b/run.sh.template
@@ -1,3 +1,11 @@
 #!/bin/sh
 PATH="$PATH:/usr/local/bin"
-pipenv run python -m src.run test_db --handler docker_postgres --container postgres --yandex
+# run with local interpreter
+pipenv run python -m src.run <DB_NAME> --handler docker_postgres --container postgres --yandex
+
+
+# run via docker (and upload to S3)
+docker-compose up --build
+docker-compose run \
+  --volume /var/backups:/backups/backups \
+  backup python -m src.run <DB_NAME> --handler postgres --container postgres --s3
