--- a/run.sh.template
+++ b/run.sh.template
@@ -1,7 +1,7 @@
 #!/bin/sh
 PATH="$PATH:/usr/local/bin"
 # run with local interpreter
-pipenv run python -m src.run <DB_NAME> --handler docker_postgres --container postgres --yandex
+pipenv run python -m src.run <DB_NAME> --handler docker_postgres --container postgres --s3
 
 
 # run via docker (and upload to S3)
