[#16] Encrypt result backup: app's refactoring

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,5 @@
 LOG_LEVEL=INFO
 
-YANDEX_TOKEN=
-YANDEX_BACKUP_DIR=/backups/
-LOCAL_BACKUP_DIR=/home/user/backups/
 LOG_DIR=
 SENTRY_DSN=
 
@@ -24,4 +21,4 @@ S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 S3_DST_PATH=
 
-ENCRYPT_KEY=
+ENCRYPT_PASS=
