--- a/.env.template
+++ b/.env.template
@@ -1,24 +1,24 @@
-LOG_LEVEL=INFO
+DB_BACKUP_LOG_LEVEL=INFO
 
-LOG_DIR=
-SENTRY_DSN=
+DB_BACKUP_LOG_DIR=
+DB_BACKUP_SENTRY_DSN=
 
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=password
+DB_BACKUP_MYSQL_HOST=localhost
+DB_BACKUP_MYSQL_PORT=3306
+DB_BACKUP_MYSQL_USER=root
+DB_BACKUP_MYSQL_PASSWORD=password
 
-PG_HOST=localhost
-PG_PORT=5432
-PG_VERSION=9.6.5
-PG_USER=postgres
-PG_PASSWORD=
+DB_BACKUP_PG_HOST=localhost
+DB_BACKUP_PG_PORT=5432
+DB_BACKUP_PG_VERSION=9.6.5
+DB_BACKUP_PG_USER=postgres
+DB_BACKUP_PG_PASSWORD=
 
-S3_REGION_NAME=
-S3_STORAGE_URL=
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-S3_BUCKET_NAME=
-S3_DST_PATH=
+DB_BACKUP_S3_REGION_NAME=
+DB_BACKUP_S3_STORAGE_URL=
+DB_BACKUP_S3_ACCESS_KEY_ID=
+DB_BACKUP_S3_SECRET_ACCESS_KEY=
+DB_BACKUP_S3_BUCKET_NAME=
+DB_BACKUP_S3_DST_PATH=
 
-ENCRYPT_PASS=
+DB_BACKUP_ENCRYPT_PASS=
