--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,6 @@
-DB_BACKUP_LOG_LEVEL=INFO
-
 DB_BACKUP_LOG_DIR=
 DB_BACKUP_SENTRY_DSN=
+DB_BACKUP_LOCAL_PATH=/home/user/backups/
 
 DB_BACKUP_MYSQL_HOST=localhost
 DB_BACKUP_MYSQL_PORT=3306
@@ -19,6 +18,6 @@ DB_BACKUP_S3_STORAGE_URL=
 DB_BACKUP_S3_ACCESS_KEY_ID=
 DB_BACKUP_S3_SECRET_ACCESS_KEY=
 DB_BACKUP_S3_BUCKET_NAME=
-DB_BACKUP_S3_DST_PATH=
+DB_BACKUP_S3_PATH=
 
 DB_BACKUP_ENCRYPT_PASS=
