--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 click = "8.1.7"
 boto3 = "1.34.18"
 sentry-sdk = "1.39.2"
+python-dotenv = "1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.0"
