--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,12 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 click = "8.1.7"
-boto3 = "1.34.18"
-sentry-sdk = "1.39.2"
-python-dotenv = "1.0.0"
+boto3 = "1.34.58"
+sentry-sdk = "1.41.0"
+python-dotenv = "1.0.1"
 
 [tool.poetry.group.dev.dependencies]
+pytest = "^8.0.2"
 black = "^23.12.0"
 flake8 = "^6.1.0"
 Flake8-pyproject = "^1.2.0"
