[#21] Small run-sh script changes

--- a/run.sh.template
+++ b/run.sh.template
@@ -1,5 +1,9 @@
 #!/bin/sh
 DB_NAME="my_db"
+NOW_TIME=$(date)
+
+echo "=== BACKUP '${DB_NAME}' at ${NOW_TIME} ==="
+
 # run backup with local interpreter (and upload to S3)
 #python -m src.run backup "$DB_NAME" --from PG-CONTAINER --container postgres --to S3
 
