[#27] Fix logging to the specified directory: check default directory

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,5 @@ services:
       - .env
     volumes:
       - ${LOCAL_PATH}:/db-backups/backups
+      - $(pwd)/logs:/db-backups/backups:rw
     network_mode: "host"
