[#27] Fix logging to the specified directory: small config changes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,5 +9,5 @@ services:
       - .env
     volumes:
       - ${LOCAL_PATH}:/db-backups/backups
-      - $(pwd)/logs:/db-backups/backups:rw
+      - ${LOG_PATH}:/db-backups/logs:rw
     network_mode: "host"
