--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,6 @@ build-backend = "poetry.core.masonry.api"
 line-length = 100
 target-version = ['py312']
 
-[tool.flake]
+[tool.flake8]
 max-line-length = 100
 extend-ignore = ['F401']
